  crash because it contains a workaround for an old memory leak which had been
  fixed in the last release of Gwen. However, the bugfix in gwen and the
  workaround in Gnucash together lead to a double free which causes the
  program to crash.
  As soon as the next release of Gnucash is out we reenable this function
  call thus finally fixing this bug.


2005-12-05   Christian Stimming <stimming@tuhh.de>

	* src/gwenhywfar.c: Register GWEN_PathManager entries for
	localedir and libdir as well. Intended to prepare for integration
	of autopackage's binreloc tools, hence providing even more
	platform independence.

===========================================================================
MARK: released gwenhywfar-1.99.1 (2005/12/01)
===========================================================================


2005-11-28  Christian Stimming  <stimming@tuhh.de>

	* src/gwenhywfar.c: Add header define for x86_64 libdir suffix.


2005/11/28: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- worked on nl_ssl: 
  - now GWEN_NetLayerSsl_Disconnect() also disconnects the
    SSL layer, not only the underlying layer
  - fixed a severe bug (double free of peer certificate)


2005/11/26: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed another bug in XML writing code (could segfault when writing empty 
  data of properties)
- fixed a bug where netlayer status changes would cause infinite recursions


2005/11/23: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in XML writing code (could segfault when writing empty data
  of data elements)


2005-11-23  Christian Stimming <stimming@tuhh.de>

	* gwenhywfar-config.in.in: Re-introduce the old --has-ui argument
	but print a single-line error message, because if the "usage" text
	is printed then the old gwenhywfar.m4 macro breaks with very weird
	error messages.

